--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@500&family=Poppins:wght@400;500;600;700&family=Roboto&family=Volkhov:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./sass/main.scss">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/main.min.css">
+    <title>Jadoo</title>
   </head>
   <body>
     <main>
