change svg way + add footer scss to main

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
     </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="footer__container">
         <ul class="footer__list">
           <li class="footer__item">
@@ -169,28 +169,28 @@
               <li class="social-networks__item">
                 <a href="" class="social-network__link">
                   <svg class="social-network_svg">
-                    <use href="./symbol-defs.svg#icon-facebook"></use>
+                    <use href="./img/svg/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-networks__item">
                 <a href="" class="social-network__link">
                   <svg class="social-network_svg">
-                    <use href="./symbol-defs.svg#icon-instagram"></use>
+                    <use href="./img/svg/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-networks__item">
                 <a href="" class="social-network__link">
                   <svg class="social-network_svg">
-                    <use href="./symbol-defs.svg#icon-twitter"></use>
+                    <use href="./img/svg/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-networks__item">
                 <a href="" class="social-network__link">
                   <svg class="social-network_svg">
-                    <use href="./symbol-defs.svg#icon-youtube"></use>
+                    <use href="./img/svg/symbol-defs.svg#icon-youtube"></use>
                   </svg>
                 </a>
               </li>
@@ -201,14 +201,14 @@
                 <li class="applications-links__item">
                   <a href="" class="applications-links__link">
                     <svg class="applications-links__img">
-                      <use href="./symbol-defs.svg#icon-google-play"></use>
+                      <use href="./img/svg/symbol-defs.svg#icon-google-play"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="applications-links__item">
                   <a href="" class="applications-links__link">
                     <svg class="applications-links__img">
-                      <use href="./symbol-defs.svg#icon-apple-store"></use>
+                      <use href="./img/svg/symbol-defs.svg#icon-apple-store"></use>
                     </svg>
                   </a>
                 </li>
