--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </section>
     </main>
     <footer class="footer">
-      <div class="footer__container">
+      <div class="footer__container container">
         <ul class="footer__list">
           <li class="footer__item">
             <a class="footer__logo">Jadoo.</a>
@@ -126,13 +126,13 @@
             <h3 class="footer__title">Company</h3>
             <ul class="footer-links">
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">About</a>
+                <a href="" class="footer-links__link ">About</a>
               </li>
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">Careers</a>
+                <a href="" class="footer-links__link ">Careers</a>
               </li>
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">Mobile</a>
+                <a href="" class="footer-links__link ">Mobile</a>
               </li>
             </ul>
           </li>
@@ -140,13 +140,13 @@
             <h3 class="footer__title">Contact</h3>
             <ul class="footer-links">
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">Help/FAQ</a>
+                <a href="" class="footer-links__link ">Help/FAQ</a>
               </li>
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">Press</a>
+                <a href="" class="footer-links__link ">Press</a>
               </li>
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">Affilates</a>
+                <a href="" class="footer-links__link ">Affilates</a>
               </li>
             </ul>
           </li>
@@ -154,42 +154,42 @@
             <h3 class="footer__title">More</h3>
             <ul class="footer-links">
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">Airlinefees</a>
+                <a href="" class="footer-links__link ">Airlinefees</a>
               </li>
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">Airline</a>
+                <a href="" class="footer-links__link ">Airline</a>
               </li>
               <li class="footer-links__item">
-                <a href="" class="footer-links__link">Low fare tips</a>
+                <a href="" class="footer-links__link ">Low fare tips</a>
               </li>
             </ul>
           </li>
           <li class="footer__item">
             <ul class="social-networks">
               <li class="social-networks__item">
-                <a href="" class="social-network__link">
-                  <svg class="social-network_svg">
+                <a href="" class="social-networks__link">
+                  <svg class="social-networks__svg">
                     <use href="./img/svg/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-networks__item">
-                <a href="" class="social-network__link">
-                  <svg class="social-network_svg">
+                <a href="" class="social-networks__link">
+                  <svg class="social-networks__svg">
                     <use href="./img/svg/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-networks__item">
-                <a href="" class="social-network__link">
-                  <svg class="social-network_svg">
+                <a href="" class="social-networks__link">
+                  <svg class="social-networks__svg">
                     <use href="./img/svg/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-networks__item">
-                <a href="" class="social-network__link">
-                  <svg class="social-network_svg">
+                <a href="" class="social-networks__link">
+                  <svg class="social-networks__svg">
                     <use href="./img/svg/symbol-defs.svg#icon-youtube"></use>
                   </svg>
                 </a>
