footer mobile styles

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </div>
           </li>
         </ul>
-        <a href="" class="footer-copyright">All rights reserved@jadoo.co</a>
+        <a href="" class="footer__copyright">All rights reserved@jadoo.co</a>
       </div>
     </footer>
   </body>
