--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__container">
+      <div class="header__container container">
         <div class="header__topline-wrap">
           <a href="#" class="header__logo link">
-            <svg class="header__logo-icon">
+            <svg class="header__logo-icon icon">
               <use href="./img/svg/header-logo.svg#logo"></use>
             </svg>
           </a>
-          <div class="header__nav-wrap">
             <nav class="header__nav">
               <ul class="header__nav-list">
                 <li class="header__nav-item">
@@ -39,16 +38,15 @@
                 </li>
               </ul>
             </nav>
-          </div>
           <div class="header__autorization"></div>
           <div class="header__languases">
             En
-            <svg class="header__languases-icon">
+            <svg class="header__languases-icon icon">
               <use href="./img/svg/symbol-defs.svg#icon-down-arrow"></use>
             </svg>
           </div>
           <button class="header__burger">
-            <svg class="header__burger-icon">
+            <svg class="header__burger-icon icon">
               <use href="./img/svg/symbol-defs.svg#icon-menu-burger"></use>
             </svg>
           </button>
