--- a/index.html
+++ b/index.html
@@ -71,22 +71,23 @@
     </header>
     <main>
       <section class="category">
-        <div class="caterory__container">
+        <div class="category__container container">
           <p class="category__desk">category</p>
           <h2 class="category__tittle">We Offer Best Services</h2>
+          <button class="category__btn">More</button>
           <ul class="category-list">
             <li class="category-list__item">
               <svg class="category-list__img">
-                <use href="./symbol-defs.svg#icon-weather"></use>
+                <use href="./img/svg/symbol-defs.svg#icon-weather"></use>
               </svg>
               <h3 class="category-list__title">Calculated Weather</h3>
               <p class="category-list__text">
                 Built Wicket longer admire do barton vanity itself do in it.
               </p>
             </li>
-            <li class="category-list__item">
+            <li class="category-list__item category-active">
               <svg class="category-list__img">
-                <use href="./symbol-defs.svg#icon-plane"></use>
+                <use href="./img/svg/symbol-defs.svg#icon-plane"></use>
               </svg>
               <h3 class="category-list__title">Best Flights</h3>
               <p class="category-list__text">
@@ -94,7 +95,7 @@
               </p>
             </li>
             <li class="category-list__item">
-              <img src="./microphone.png" alt="microphone" />
+              <img src="./img/microphone.png" alt="microphone" />
               <h3 class="category-list__title">Local Events</h3>
               <p class="category-list__text">
                 Barton vanity itself do in it. Preferd to men it engrossed
@@ -103,7 +104,7 @@
             </li>
             <li class="category-list__item">
               <svg class="category-list__img">
-                <use href="./symbol-defs.svg#icon-gear"></use>
+                <use href="./img/svg/symbol-defs.svg#icon-gear"></use>
               </svg>
               <h3 class="category-list__title">Customization</h3>
               <p class="category-list__text">
@@ -156,16 +157,16 @@
           <p class="partners__desc">Top Selling</p>
           <ul class="partners__list">
             <li class="partners__item">
-              <img src="./partner-image1.png" alt="" class="partners__img" />
+              <img src="./img/partner-image1.png" alt="" class="partners__img" />
             </li>
             <li class="partners__item">
-              <img src="./partner-image2.png" alt="" class="partners__img" />
+              <img src="./img/partner-image2.png" alt="" class="partners__img" />
             </li>
             <li class="partners__item">
-              <img src="./partner-image3.png" alt="" class="partners__img" />
+              <img src="./img/partner-image3.png" alt="" class="partners__img" />
             </li>
             <li class="partners__item">
-              <img src="./partner-image4.png" alt="" class="partners__img" />
+              <img src="./img/partner-image4.png" alt="" class="partners__img" />
             </li>
           </ul>
         </div>
