--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
               <use href="./img/svg/header-logo.svg#logo"></use>
             </svg>
           </a>
-            <nav class="header__nav">
-              <ul class="header__nav-list">
-                <li class="header__nav-item">
-                  <a href="#" class="header__nav-link">Desitnations</a>
-                </li>
-                <li class="header__nav-item">
-                  <a href="#" class="header__nav-link">Hotels</a>
-                </li>
-                <li class="header__nav-item">
-                  <a href="#" class="header__nav-link">Flights</a>
-                </li>
-                <li class="header__nav-item">
-                  <a href="#" class="header__nav-link">Bookings</a>
-                </li>
-              </ul>
-            </nav>
+          <nav class="header__nav">
+            <ul class="header__nav-list">
+              <li class="header__nav-item">
+                <a href="#" class="header__nav-link">Desitnations</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#" class="header__nav-link">Hotels</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#" class="header__nav-link">Flights</a>
+              </li>
+              <li class="header__nav-item">
+                <a href="#" class="header__nav-link">Bookings</a>
+              </li>
+            </ul>
+          </nav>
           <div class="header__autorization"></div>
           <div class="header__languases">
             En
@@ -70,6 +70,35 @@
       </div>
     </header>
     <main>
+      <section class="hero">
+        <div class="hero__container container">
+          <div class="hero__text-wrap">
+            <p class="hero__desc">Best Destinations around the world</p>
+            <h1 class="hero__title">
+              Travel, enjoy and live a new and full life
+            </h1>
+            <p class="hero__subtitle">
+              Built Wicket longer admire do barton vanity itself do in it.
+              Preferred to sportsmen it engrossed listening. Park gate sell they
+              west hard for the.
+            </p>
+            <div class="hero__buttons-wrap">
+              <button class="hero__btn-more">Find out more</button>
+              <button class="hero__btn-demo">
+                <span>
+                  <svg>
+                    <use href=""></use>
+                  </svg>
+                </span>
+                Play Demo
+              </button>
+            </div>
+          </div>
+          <div class="hero__img-thumb">
+            <img src="" alt="" />
+          </div>
+        </div>
+      </section>
       <section class="category">
         <div class="category__container container">
           <p class="category__desk">category</p>
@@ -157,16 +186,32 @@
           <p class="partners__desc">Top Selling</p>
           <ul class="partners__list">
             <li class="partners__item">
-              <img src="./img/partner-image1.png" alt="" class="partners__img" />
+              <img
+                src="./img/partner-image1.png"
+                alt=""
+                class="partners__img"
+              />
             </li>
             <li class="partners__item">
-              <img src="./img/partner-image2.png" alt="" class="partners__img" />
+              <img
+                src="./img/partner-image2.png"
+                alt=""
+                class="partners__img"
+              />
             </li>
             <li class="partners__item">
-              <img src="./img/partner-image3.png" alt="" class="partners__img" />
+              <img
+                src="./img/partner-image3.png"
+                alt=""
+                class="partners__img"
+              />
             </li>
             <li class="partners__item">
-              <img src="./img/partner-image4.png" alt="" class="partners__img" />
+              <img
+                src="./img/partner-image4.png"
+                alt=""
+                class="partners__img"
+              />
             </li>
           </ul>
         </div>
