--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="hero__img-thumb">
-            <img src="" alt="" />
+            <img src="./img/hero-traveller.png" alt="photo girl" />
           </div>
         </div>
       </section>
