--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <div class="hero__buttons-wrap">
               <button class="hero__btn-more">Find out more</button>
               <button class="hero__btn-demo">
-                <span>
-                  <svg>
-                    <use href=""></use>
+                <span class="hero__btn-demo-icon-wrap">
+                  <svg class="hero__btn-demo-icon">
+                    <use href="./img/svg/btn-play.svg#play"></use>
                   </svg>
                 </span>
                 Play Demo
