--- a/index.html
+++ b/index.html
@@ -144,38 +144,38 @@
         </div>
       </section>
       <section class="destinations">
-        <div class="destinations__container">
+        <div class="destinations__container container">
           <p class="destinations__desc">Top Selling</p>
           <h2 class="destinations__title">Top Destinations</h2>
           <ul class="destinations-list">
             <li class="destinations-list__item">
-              <img src="" alt="" class="destination-list" />
-              <div class="destination-list__content">
-                <div class="destination-list__topline">
-                  <h3 class="destination-list__title">Rome, Italty</h3>
-                  <p class="destination-list__price">$5,42k</p>
+              <img src="./img/destination-rome.png" alt="" class="destinations-list__img" />
+              <div class="destinations-list__text-content">
+                <div class="destinations-list__topline">
+                  <h3 class="destinations-list__title">Rome, Italty</h3>
+                  <p class="destinations-list__price">$5,<span>42k</span></p>
                 </div>
-                <p class="duretion">10 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">10 Days<span>Trip</span></p>
               </div>
             </li>
             <li class="destinations-list__item">
-              <img src="" alt="" class="destination-list" />
-              <div class="destination-list__content">
-                <div class="destination-list__topline">
-                  <h3 class="destination-list__title">London, UK</h3>
-                  <p class="destination-list__price">$4.2k</p>
+              <img src="./img/destination-london.png" alt="" class="destinations-list__img"/>
+              <div class="destinations-list__text-content">
+                <div class="destinations-list__topline">
+                  <h3 class="destinations-list__title">London, UK</h3>
+                  <p class="destinations-list__price">$4.2<span>k</span></p>
                 </div>
-                <p class="duretion">12 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">12 Days<span>Trip</span></p>
               </div>
             </li>
             <li class="destinations-list__item">
-              <img src="" alt="" class="destination-list" />
-              <div class="destination-list__content">
-                <div class="destination-list__topline">
-                  <h3 class="destination-list__title">Full Europe</h3>
-                  <p class="destination-list__price">$15k</p>
+              <img src="./img/destination-europe.png" alt="" class="destination-list__img"/>
+              <div class="destinations-list__text-content">
+                <div class="destinations-list__topline">
+                  <h3 class="destinations-list__title">Full Europe</h3>
+                  <p class="destinations-list__price">$15<span>k</span></p>
                 </div>
-                <p class="duretion">28 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">28 Days<span>Trip</span></p>
               </div>
             </li>
           </ul>
