--- a/index.html
+++ b/index.html
@@ -149,36 +149,71 @@
           <h2 class="destinations__title">Top Destinations</h2>
           <ul class="destinations-list">
             <li class="destinations-list__item">
-              <img src="./img/destination-rome.png" alt="" class="destinations-list__img" />
+              <img
+                src="./img/destination-rome.png"
+                alt=""
+                class="destinations-list__img"
+              />
               <div class="destinations-list__text-content">
                 <div class="destinations-list__topline">
                   <h3 class="destinations-list__title">Rome, Italty</h3>
                   <p class="destinations-list__price">$5,<span>42k</span></p>
                 </div>
-                <p class="destinations-list__duration">10 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">
+                  10 Days<span>Trip</span>
+                </p>
               </div>
             </li>
             <li class="destinations-list__item">
-              <img src="./img/destination-london.png" alt="" class="destinations-list__img"/>
+              <img
+                src="./img/destination-london.png"
+                alt=""
+                class="destinations-list__img"
+              />
               <div class="destinations-list__text-content">
                 <div class="destinations-list__topline">
                   <h3 class="destinations-list__title">London, UK</h3>
                   <p class="destinations-list__price">$4.2<span>k</span></p>
                 </div>
-                <p class="destinations-list__duration">12 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">
+                  12 Days<span>Trip</span>
+                </p>
               </div>
             </li>
             <li class="destinations-list__item">
-              <img src="./img/destination-europe.png" alt="" class="destination-list__img"/>
+              <img
+                src="./img/destination-europe.png"
+                alt=""
+                class="destination-list__img"
+              />
               <div class="destinations-list__text-content">
                 <div class="destinations-list__topline">
                   <h3 class="destinations-list__title">Full Europe</h3>
                   <p class="destinations-list__price">$15<span>k</span></p>
                 </div>
-                <p class="destinations-list__duration">28 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">
+                  28 Days<span>Trip</span>
+                </p>
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="testimonals">
+        <div class="testimonals__container container">
+          <div class="testimonals__head">
+            <p class="testimonals__desc">Testimonals</p>
+            <h2 class="testimonals__tittle">What people say about us</h2>
+          </div>
+          <div class="testimonals__response">
+            <p class="testimonals__text">
+              “On the Windows talking painted pasture yet its express parties
+              use. Sure last upon he same as knew next. Of believed or diverted
+              no.”
+            </p>
+            <p class="testimonals__signature">Mike Taylor</p>
+            <p class="testimonals__location">Lahore, Pakistan</p>
+          </div>
         </div>
       </section>
       <section class="partners">
