update hero and header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
               </li>
             </ul>
           </nav>
-          <div class="header__autorization"></div>
+          <div class="header__autorization">
+            <button class="header__login">Login</button>
+            <button class="header__sing-up">Sign up</button>
+          </div>
           <div class="header__languases">
             En
             <svg class="header__languases-icon icon">
@@ -149,33 +152,51 @@
           <h2 class="destinations__title">Top Destinations</h2>
           <ul class="destinations-list">
             <li class="destinations-list__item">
-              <img src="./img/destination-rome.png" alt="" class="destinations-list__img" />
+              <img
+                src="./img/destination-rome.png"
+                alt=""
+                class="destinations-list__img"
+              />
               <div class="destinations-list__text-content">
                 <div class="destinations-list__topline">
                   <h3 class="destinations-list__title">Rome, Italty</h3>
                   <p class="destinations-list__price">$5,<span>42k</span></p>
                 </div>
-                <p class="destinations-list__duration">10 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">
+                  10 Days<span>Trip</span>
+                </p>
               </div>
             </li>
             <li class="destinations-list__item">
-              <img src="./img/destination-london.png" alt="" class="destinations-list__img"/>
+              <img
+                src="./img/destination-london.png"
+                alt=""
+                class="destinations-list__img"
+              />
               <div class="destinations-list__text-content">
                 <div class="destinations-list__topline">
                   <h3 class="destinations-list__title">London, UK</h3>
                   <p class="destinations-list__price">$4.2<span>k</span></p>
                 </div>
-                <p class="destinations-list__duration">12 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">
+                  12 Days<span>Trip</span>
+                </p>
               </div>
             </li>
             <li class="destinations-list__item">
-              <img src="./img/destination-europe.png" alt="" class="destination-list__img"/>
+              <img
+                src="./img/destination-europe.png"
+                alt=""
+                class="destination-list__img"
+              />
               <div class="destinations-list__text-content">
                 <div class="destinations-list__topline">
                   <h3 class="destinations-list__title">Full Europe</h3>
                   <p class="destinations-list__price">$15<span>k</span></p>
                 </div>
-                <p class="destinations-list__duration">28 Days<span>Trip</span></p>
+                <p class="destinations-list__duration">
+                  28 Days<span>Trip</span>
+                </p>
               </div>
             </li>
           </ul>
