--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
       </section>
       <section class="partners">
-        <div class="partners__container">
+        <div class="partners__container container">
           <p class="partners__desc">Top Selling</p>
           <ul class="partners__list">
             <li class="partners__item">
@@ -228,6 +228,8 @@
                 src="./img/partner-image1.png"
                 alt=""
                 class="partners__img"
+                width="130"
+                height="120"
               />
             </li>
             <li class="partners__item">
@@ -235,6 +237,8 @@
                 src="./img/partner-image2.png"
                 alt=""
                 class="partners__img"
+                width="172"
+                height="102"
               />
             </li>
             <li class="partners__item">
@@ -242,6 +246,8 @@
                 src="./img/partner-image3.png"
                 alt=""
                 class="partners__img"
+                width="241"
+                height="149"
               />
             </li>
             <li class="partners__item">
@@ -249,6 +255,8 @@
                 src="./img/partner-image4.png"
                 alt=""
                 class="partners__img"
+                width="162"
+                height="30"
               />
             </li>
           </ul>
