--- a/index.html
+++ b/index.html
@@ -262,6 +262,18 @@
           </ul>
         </div>
       </section>
+      <section class="subscribe">
+        <div class="subscribe__container container">
+          <h2 class="subscribe__title">Subscribe to get information, latest news and other
+            interesting offers about Cobham</h2>
+            <form class="subscribe__form">
+              <label class="subscribe__label" for="email">
+                <input id="email" class="subscribe__iput" type="email" placeholder="Your email" required>
+              </label>
+              <button class="subscribe__btn" type="submit">Subscribe</button>
+            </form>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container container">
