--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               </p>
             </li>
             <li class="category-list__item">
-              <img src="./img/microphone.png" alt="microphone" />
+              <img src="./img/microphone.png" alt="microphone" class="category-list__img"/>
               <h3 class="category-list__title">Local Events</h3>
               <p class="category-list__text">
                 Barton vanity itself do in it. Preferd to men it engrossed
