--- a/index.html
+++ b/index.html
@@ -268,10 +268,15 @@
             interesting offers about Cobham</h2>
             <form class="subscribe__form">
               <label class="subscribe__label" for="email">
-                <input id="email" class="subscribe__iput" type="email" placeholder="Your email" required>
+                <input id="email" class="subscribe__input" type="email" placeholder="Your email" required>
               </label>
               <button class="subscribe__btn" type="submit">Subscribe</button>
             </form>
+            <div class="subscribe__telegram">
+              <svg class="subscribe__telegram-icon">
+                <use href="./img/svg/telegram.svg#telegram"></use>
+              </svg>
+            </div>
         </div>
       </section>
     </main>
